Quirky download capabilities added.
