# specs/swaggerdoc.yaml
@@ -368,7 +368,7 @@ paths:
         500:
           $ref: '#/components/responses/500ServerError'
   /dataload/${entity}/download:
-    post:
+    get:
       summary: download the contents of a database table (up to 100,000 rows)
       tags:
         - dataload
@@ -386,6 +386,24 @@ paths:
         200:
           description: OK
           content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    description: The total number of matching entities in the database.
+                    type: integer
+                  plural_entity_name:
+                    description: the `plural_entity_name` property will be the pluralized name of what is being downloaded ('products', 'families', 'equipment', etc.).
+                    type: array
+                    items:
+                      type: object
+                      description: the individual objects data corresponding to rows in the table.
+                  headers:
+                    type: array
+                    items:
+                      type: object
+                      description: a single object whose properties can be used to create headers for CSV/table rendering.
             text/csv: {}
         400:
           $ref: '#/components/responses/400ClientError'
@@ -627,46 +645,36 @@ paths:
         500:
           $ref: '#/components/responses/500ServerError'
   /products/search/download:
-    get: 
-      summary: Downlaod a search for products with CSV output.
-      description: Identical to `/products/search` except the output is downloaded as a CSV file
-      tags:
-        - products
-      parameters:
-        # - in: query
-        #   name: token
-        #   schema:
-        #     type: string
-        #   description: API token - same as used during BASIC Authentication
-        - in: query
-          name: payload
-          schema:
-            type: string
-          description: Build an object as you would for the `/products/search` endpoint, stringify it, and urlencode it. 
-      responses:
-        200:
-          description: OK
-          content:
-            text/csv: {}
-        400:
-          $ref: '#/components/responses/400ClientError'
-        500:
-          $ref: '#/components/responses/500ServerError'
+    # get: 
+    #   summary: Downlaod a search for products with CSV output.
+    #   description: Identical to `/products/search` except the output is downloaded as a CSV file
+    #   tags:
+    #     - products
+    #   parameters:
+    #     # - in: query
+    #     #   name: token
+    #     #   schema:
+    #     #     type: string
+    #     #   description: API token - same as used during BASIC Authentication
+    #     - in: query
+    #       name: payload
+    #       schema:
+    #         type: string
+    #       description: Build an object as you would for the `/products/search` endpoint, stringify it, and urlencode it. 
+    #   responses:
+    #     200:
+    #       description: OK
+    #       content:
+    #         text/csv: {}
+    #     400:
+    #       $ref: '#/components/responses/400ClientError'
+    #     500:
+    #       $ref: '#/components/responses/500ServerError'
     post:
       summary: Perform an advanced search for products with download output.
       description: Extends basic search capabilities, allowing a search term to be used across many different product fields. Additional filter criteria can be used to further narrow the search-term search.
       tags:
         - products
-      parameters:
-        - in: header
-          name: Accept
-          required: false
-          description: If omitted, `application/json` is assumed.
-          schema:
-            type: string
-            enum:
-              - application/json
-              - text/csv
       requestBody:
         description: >
           The search criteria to use for the search.
@@ -766,7 +774,6 @@ paths:
                     items:
                       type: object
                       description: a single object whose properties can be used to create headers for CSV/table rendering.
-            
         400:
           $ref: '#/components/responses/400ClientError'
         500:
@@ -1794,6 +1801,110 @@ paths:
           $ref: '#/components/responses/400ClientError'
         500:
           $ref: '#/components/responses/500ServerError'
+  /equipment/search/download:
+    post:
+      summary: Download the results of an advanced search for equipment.
+      description: Extends basic search capabilities, allowing a search term to be used across different equipment fields. Additional filter criteria can be used to further narrow the search-term search.
+      tags:
+        - equipment
+      parameters:
+        - in: header
+          name: Accept
+          required: false
+          description: If omitted, `application/json` is assumed.
+          schema:
+            type: string
+            enum:
+              - application/json
+              - text/csv
+      requestBody:
+        description: >
+          The search criteria to use for the search.
+        required: true
+        content:
+          application/json:
+            schema:
+              allOf:
+              - $ref: '#/components/schemas/SearchCriteria'
+              - type: object
+                properties:
+                  search_term:
+                    type: string
+                    description: wildcard search value to be used for searching any/all of the `search_term_fields`
+                  search_term_fields:
+                    description: which equipment fields the search term is applied to
+                    type: array
+                    items:
+                      type: string
+                      enum: [model, brand_en, type_en]
+                  search_filter:
+                    type: string
+                    enum: [brand, equipment type]
+                    description: >
+                      the type of filtering criteria to further refine results.
+                  search_filter_value:
+                    oneOf:
+                      - type: integer
+                      - type: string
+                    description: >
+                      The value to be used in the search filter criteria depends on the
+                      value used for the `search_filter`
+
+                        | search_filter | value is a(n) | matching |
+                        |---------------|------------|----------|
+                        | brand | integer | brand_id of the equipment
+                        | equipment type | integer | equipment_type_id of the equipment 
+                   
+            examples:
+              example1:
+                description: >
+                  Search for equipment having a `model` matching `SureSigns` (wildcard),
+                  
+                  
+                  **and** further apply a filter to get results where equipment has **equipment type** (`equipment_type_id`) = `1`.
+                  
+                  
+                  Order the results by `id` (equipment id). 
+                  
+
+                  Do not skip any results, but limit the output to `10` entries.
+                value:
+                  offset: 0
+                  limit: 10
+                  order_by:
+                    - id
+                  search_term: SureSigns
+                  search_term_fields:
+                    - model
+                  category_id:
+                    - 7
+                  search_filter: equipment type
+                  search_filter_value: 1
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    description: The total number of matching equipment in the database.
+                    type: integer
+                  equipment_views:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/EquipmentView'
+                  headers:
+                    type: array
+                    items:
+                      type: object
+                      description: a single object whose properties can be used to create headers for CSV/table rendering.
+            text/csv: {} 
+        400:
+          $ref: '#/components/responses/400ClientError'
+        500:
+          $ref: '#/components/responses/500ServerError'
   /families:
     summary: Represents a product family
     post:
@@ -1978,6 +2089,114 @@ paths:
           $ref: '#/components/responses/400ClientError'
         500:
           $ref: '#/components/responses/500ServerError'
+  /families/search/download:
+    post:
+      summary: Download advanced search results for families.
+      description: Extends basic search capabilities, allowing a search term to be used across different family fields. Additional filter criteria can be used to further narrow the search-term search.
+      tags:
+        - families
+      requestBody:
+        description: >
+          The search criteria to use for the search.
+        required: true
+        content:
+          application/json:
+            schema:
+              allOf:
+              - $ref: '#/components/schemas/SearchCriteria'
+              - type: object
+                properties:
+                  search_term:
+                    type: string
+                    description: wildcard search value to be used for searching any/all of the `search_term_fields`
+                  search_term_fields:
+                    description: which family fields the search term is applied to
+                    type: array
+                    items:
+                      type: string
+                      enum: [family_code, oem_brand_en, name_en, category_en]
+                  search_filter:
+                    type: string
+                    enum: [oem brand, product type]
+                    description: >
+                      the type of filtering criteria to further refine results.
+                  search_filter_value:
+                    oneOf:
+                      - type: integer
+                      - type: string
+                    description: >
+                      The value to be used in the search filter criteria depends on the
+                      value used for the `search_filter`
+
+                        | search_filter | value is a(n) | matching |
+                        |---------------|------------|----------|
+                        | oem brand id | integer | oem_brand_id of any matching product linked to the family
+                        | product type | integer | product_type_id of any matching product linked to the family
+                        
+                  category_id:
+                    type: array
+                    description: >
+                      The categories to add to the family search filtering. 
+                      Specifying more than one category widens the search results. 
+                      Note: The filtering actually looks for **the category on products linked to the family.**
+                   
+            examples:
+              example1:
+                description: >
+                  Search for families having a `family_code` or `name_en` matching `F` (wildcard),
+
+                  
+                  **and** that are linked with products belonging to `category_id` = `5`, `6`, `7`, or `8`. 
+                  
+                  
+                  **and** further apply a filter to get results where familes have any products associated with **product type** (`product_type_id`) = `2`.
+                  
+                  
+                  Order the results by `id` (family id). 
+                  
+
+                  Do not skip any results, but limit the output to `10` entries.
+                value:
+                  offset: 0
+                  limit: 10
+                  order_by:
+                    - id
+                  search_term: F
+                  search_term_fields:
+                    - family_code
+                    - name_en
+                  category_id:
+                    - 4
+                    - 5
+                    - 6
+                    - 7
+                  search_filter: product type
+                  search_filter_value: 2
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    description: The total number of matching families in the database.
+                    type: integer
+                  family_views:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/FamilyView'
+                  headers:
+                    type: array
+                    items:
+                      type: object
+                      description: a single object whose properties can be used to create headers for CSV/table rendering.
+            text/csv: {} 
+        400:
+          $ref: '#/components/responses/400ClientError'
+        500:
+          $ref: '#/components/responses/500ServerError'
   /groups:
     summary: Represents a product group
     post:
@@ -2109,6 +2328,75 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Group'
+        400:
+          $ref: '#/components/responses/400ClientError'
+        500:
+          $ref: '#/components/responses/500ServerError'
+  /groups/search/download:
+    post:
+      summary: Download results from an advanced search for groups.
+      description: Extends basic search capabilities, allowing a search term to be used across many different group fields. Additional filter criteria can be used to further narrow the search-term search.
+      tags:
+        - groups
+      requestBody:
+        description: >
+          The search criteria to use for the search.
+        required: true
+        content:
+          application/json:
+            schema:
+              allOf:
+              - $ref: '#/components/schemas/SearchCriteria'
+              - type: object
+                properties:
+                  search_term:
+                    type: string
+                    description: wildcard search value to be used for searching any/all of the `search_term_fields`
+                  search_term_fields:
+                    description: which group fields the search term is applied to
+                    type: array
+                    items:
+                      type: string
+                      enum: [group_code]
+                  
+            examples:
+              example1:
+                description: >
+                  Search for group having a `group_code` matching `028` (wildcard),
+                  
+                  
+                  Order the results by `id` (group id). 
+                  
+
+                  Do not skip any results, but limit the output to `10` entries.
+                value:
+                  offset: 0
+                  limit: 10
+                  order_by:
+                    - id
+                  search_term: 028
+                  search_term_fields:
+                    - group_code
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    description: The total number of matching groups in the database.
+                    type: integer
+                  groups:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Group'
+                  headers:
+                    type: array
+                    items:
+                      type: object
+                      description: a single object whose properties can be used to create headers for CSV/table rendering.
         400:
           $ref: '#/components/responses/400ClientError'
         500:
